--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
 
-name: Generate Snake
+name: Generate-snake-game-from-github-contribution-grid
 
 # Controls when the action will run. This action runs every 6 hours.
 
@@ -26,10 +26,11 @@ jobs:
       - uses: actions/checkout@v2
       
     # Generates the snake  
-      - uses: Platane/snk@master
+      - uses: Platane/snk@v3.2.0
+            
         id: snake-gif
         with:
-          github_user_name: mishmanners
+          github_user_name: 0xvNFT
           # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
